traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:14: error: Missing closing brace `}' assumed here
}
^TraversalByColumn:16: error: expected class or object definition
def positionfinale():Boolean = {
^